# data-lineage-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: Source_to_Target_Mapping.csv  invalid_mappings.json  source_entities.csv
lineage/: __init__.py  cli.py  data_processor.py  dbt_generator.py  impact_analyzer.py  lineage_graph.py  utils.py
output/: impact_analysis.json  impacted_tables.json
output/dbt_sample_project/: .user.yml  dbt_project.yml  profiles.yml
output/dbt_sample_project/models/: analytics_customers.sql  analytics_sales.sql  sources.yml  staging_customers.sql  staging_orders.sql  staging_sales.sql
tests/: test_cli.py
